--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
+          <li class="name">Naoto Yamaura</li>
           <li><a href="#">Home</a></li>
           <li><a href="#">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/me.jpg" alt="Drawing of Jane Smith" class="profile-image">
+      <h1 class="tag name">Hello, I’m Naoto.</h1>
+      <p class="tag location">My home is Yokohama, Kanagawa.</p>
     </header>
 
     <main class="flex">
