--- a/experience.html
+++ b/experience.html
@@ -11,8 +11,8 @@
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Naoto Yamaura</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
@@ -24,21 +24,24 @@
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an Solution Architect at a US company who loves consulting about IT technology. I live in Japan now but I had lived in Houston, Texas. I am delighted to be able to build bridges between Japan and the US through my work.</p>
-        <p>I am always interested in developing my technical skills. On the other hand, I have a hand in acquiring English language skills.</p>
+        <h2>Academic Background</h2>
+        <ul>
+          <li>Executive MBA, NUCB</li>
+          <li>Bacheler of Engineering, Nagoya University</li>
+          <li>TOEIC Score: 895</li>
+        </ul>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I want to develop front-end development skills that will help me in my job through Treehouse courses. Specific skills:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
+        <h2>Job History</h2>
+        <p>I have experienced a variety of workplaces:</p>
+        <ul>
+          <li>Amazon.co.jp</li>
+          <li>Salesforce.com</li>
+          <li>Zuora</li>
+          <li>Amplitude</li>
+          <li>HubSpot</li>
         </ul>
-        <p>If I could learn these skills, I would not only be able to help my clients, but perhaps develop my own programmes to add a little to my income.</p>
       </div> 
 
     </main>
